[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdspy"
version = "2.0.7"
authors = [
    {name="Patrick Sheehan", email="psheehan@nrao.edu"},
]
description = "Radiative transfer modeling of protoplanetary disks"
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "emcee",
    "corner",
    "hyperion",
    "h5py",
    "mpi4py",
    "astropy",
    "schwimmbad",
    "dynesty",
    "scikit-learn",
    "dishes @ git+https://github.com/psheehan/dishes.git"
]

[package.urls]
Homepage = "https://github.com/psheehan/pdspy"

[tool.setuptools]
    script-files = [
        "bin/config_template.py",
        "bin/upgrade_to_pdspy2.py",
        "bin/generate_surrogate_model.py",
        "bin/disk_model_emcee3.py",
        "bin/disk_model_nested.py",
        "bin/disk_model_dynesty.py",
        "bin/disk_model_powerlaw.py",
        "bin/flared_model_emcee3.py",
        "bin/flared_model_nested.py",
        "bin/flared_model_dynesty.py"]

[tool.setuptool.packages.find]
where = ["pdspy"]